permuted LU factorization worked examples

--- a/Linear system of equations/024-linsys-perms.ipynb
+++ b/Linear system of equations/024-linsys-perms.ipynb
@@ -233,56 +233,183 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8525c0cb-a973-4e86-8d3b-b77ea2c1235b",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
-   "source": [
-    "## Worked examples"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6ceffd52-56eb-4625-8fbc-e4696a69e3f4",
+   "id": "7cd4eb89",
    "metadata": {},
    "source": [
-    "````{exercise}  TODO\n",
-    ":label: row-reduce-ex1\n",
-    "Write me\n",
+    "````{exercise} Permuting a linear system\n",
+    ":label: linsys-perms-ex1\n",
+    "\n",
+    "Consider the following linear system:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    x + 2y + z = -2\\\\\n",
+    "    2x + 4y - z = 12\\\\\n",
+    "    -x + y - z = 5\n",
+    "\\end{align*}\n",
+    "\n",
+    "Show that the coefficient matrix\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    A = \\bm \n",
+    "        1 & 2 & 1 \\\\\n",
+    "        2 & 4 & -1 \\\\\n",
+    "        -1 & 1 & -1\n",
+    "    \\em\n",
+    "\\end{align*}\n",
+    "\n",
+    "is irregular. \n",
+    "\n",
+    "Then, given the permutation matrix\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    P = \\bm\n",
+    "        1&0&0\\\\\n",
+    "        0&0&1\\\\\n",
+    "        0&1&0\n",
+    "    \\em\n",
+    "\\end{align*}\n",
+    "\n",
+    "show that the permuted coefficient matrix $PA$ is regular. \n",
+    "\n",
+    "Finally, solve the permuted system $PA = P \\mathbf b$ by first computing the $LU$ factorization of $PA$, and then using forward and back substitution with $PA\\mathbf x = LU\\mathbf x = P\\mathbf b$.\n",
+    "\n",
     ":::{hint} Click me for a hint!\n",
     ":class: dropdown\n",
-    "Write me\n",
+    "Remember, a matrix is regular if and only if it has an $LU$ factorization. What happens when we run the $LU$ factorization algorithm on $A$?\n",
     "\n",
     ":::\n",
-    "```{solution} my-exercise\n",
+    "```{solution} linsys-perms-ex1\n",
     ":class: dropdown\n",
-    "Write me\n",
+    "\n",
+    "First, let's prove that $A$ is irregular. Let's run the $LU$ factorization algorithm on $A$ (which is really just Gaussian elimination). With $1$ as our first pivot, we eliminate column 1:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\underbrace{\\bm 1&2&1\\\\2&4&-1\\\\-1&1&-1 \\em}_A &= \\bm 1&0&0\\\\0&1&0\\\\0&0&1\\em \\bm 1&2&1\\\\2&4&-1\\\\-1&1&-1 \\em\\\\\n",
+    "    &= \\bm 1&0&0\\\\0&1&0\\\\0&0&1\\em\\left(\\bm 1&0&0\\\\2&1&0\\\\-1&0&1 \\em \\bm 1&0&0\\\\-2&1&0\\\\1&0&1 \\em\\right) \\bm 1&2&1\\\\2&4&-1\\\\-1&1&-1 \\em\\\\\n",
+    "    &=\\left(\\bm 1&0&0\\\\0&1&0\\\\0&0&1\\em\\bm 1&0&0\\\\2&1&0\\\\-1&0&1 \\em \\right)  \\left(\\bm 1&0&0\\\\-2&1&0\\\\1&0&1 \\em \\bm 1&2&1\\\\2&4&-1\\\\-1&1&-1 \\em\\right)\\\\\n",
+    "    &=\\bm 1&0&0\\\\2&1&0\\\\-1&0&1 \\em \\bm 1&2&1\\\\0&0&-3\\\\0&3&0 \\em\n",
+    "\\end{align*}\n",
+    "\n",
+    "Uh oh! Our second pivot (the element at position (2, 2) of the rightmost matrix in the bottom expression) is now zero, so the $LU$ factorization algorithm fails. This means that $A$ doesn't have an $LU$ factorization, so $A$ is irregular.\n",
+    "\n",
+    "The permuted matrix $PA$ is\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    PA = \\underbrace{\\bm\n",
+    "        1&0&0\\\\\n",
+    "        0&0&1\\\\\n",
+    "        0&1&0\n",
+    "    \\em}_P \\underbrace{\\bm 1&2&1\\\\2&4&-1\\\\-1&1&-1 \\em}_A = \\bm 1&2&1\\\\-1&1&-1\\\\2&4&-1 \\em\n",
+    "\\end{align*}\n",
+    "\n",
+    "Now, let's run the $LU$ factorization algorithm on $PA$. With $1$ as our first pivot, we eliminate column $1$:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\underbrace{\\bm 1&2&1\\\\-1&1&-1\\\\2&4&-1 \\em}_{PA} &= \\bm 1&0&0\\\\0&1&0\\\\0&0&1\\em \\bm 1&2&1\\\\-1&1&-1\\\\2&4&-1 \\em\\\\\n",
+    "    &= \\bm 1&0&0\\\\0&1&0\\\\0&0&1\\em\\left(\\bm 1&0&0\\\\-1&1&0\\\\2&0&1 \\em \\bm 1&0&0\\\\1&1&0\\\\-2&0&1 \\em\\right) \\bm 1&2&1\\\\-1&1&-1\\\\2&4&-1 \\em\\\\\n",
+    "    &= \\left(\\bm 1&0&0\\\\0&1&0\\\\0&0&1\\em\\bm  1&0&0\\\\-1&1&0\\\\2&0&1 \\em\\right) \\left(\\bm 1&0&0\\\\1&1&0\\\\-2&0&1 \\em\\bm 1&2&1\\\\-1&1&-1\\\\2&4&-1 \\em\\right)\\\\\n",
+    "    &= \\underbrace{\\bm 1&0&0\\\\-1&1&0\\\\2&0&1 \\em}_L \\underbrace{\\bm 1&2&1\\\\0&3&0\\\\0&0&-3 \\em}_U\n",
+    "\\end{align*}\n",
+    "\n",
+    "For this exercise, we had a small 3x3 system, so that's it for the $LU$ factorization algorithm! \n",
+    "\n",
+    "The last step is to solve with forwardsubstition and backsubstitution on the system:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\underbrace{\\bm 1&0&0\\\\-1&1&0\\\\2&0&1 \\em}_L \\underbrace{\\bm 1&2&1\\\\0&3&0\\\\0&0&-3 \\em}_U \\underbrace{\\bm x\\\\y\\\\z \\em}_{\\mathbf x} = \\underbrace{\\bm -2\\\\5\\\\12 \\em}_{P \\mathbf b}\n",
+    "\\end{align*}\n",
+    "\n",
+    "And we get:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    U\\mathbf x = \\bm -2\\\\3\\\\18 \\em, \\quad \\mathbf x = \\bm 2\\\\ 1\\\\ -6\\em\n",
+    "\\end{align*}\n",
+    "\n",
     "```\n",
     "````"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2c6493b5-6b12-415a-a159-646579661219",
+   "id": "01559894",
    "metadata": {},
    "source": [
-    "````{exercise}  TODO\n",
-    ":label: row-reduce-ex1\n",
-    "Write me\n",
-    ":::{hint} Click me for a hint!\n",
-    ":class: dropdown\n",
-    "Write me\n",
+    "```{prf:example} Simultaneously finding the P, L, and U matrices\n",
     "\n",
-    ":::\n",
-    "```{solution} my-exercise\n",
-    ":class: dropdown\n",
-    "Write me\n",
-    "```\n",
-    "````"
+    "So far, we've learned that *every* nonsingular square matrix $A$ has at least one factorization of the form $PA = LU$, where $P$ is a permutation matrix and $L, U$ are lower and upper triangular, respectively. \n",
+    "\n",
+    "In [](#linsys-perms-ex1), you were given the permutation $P$ beforehand. But what if don't have prior knowledge of $P$?\n",
+    "\n",
+    "It turns out that, given a square nonsingular matrix $A$, we can compute the $P, L, U$ matrices simultaneously. In this example, we'll demonstrate a procedure for computing $P, L, U$ simultaneously using the same system as [](#linsys-perms-ex1). It's basically just Gaussian elimination with row swaps!\n",
+    "\n",
+    "First, let's write out the obvious equality \n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\underbrace{\\bm 1&0&0\\\\0&1&0\\\\0&0&1 \\em}_{\"P\"}\\underbrace{\\bm 1&2&1\\\\2&4&-1\\\\-1&1&-1 \\em}_A = \\underbrace{\\bm 1&0&0\\\\0&1&0\\\\0&0&1 \\em}_{\"L\"} \\underbrace{\\bm 1&2&1\\\\2&4&-1\\\\-1&1&-1 \\em}_{\"U\"}\n",
+    "\\end{align*}\n",
+    "\n",
+    "You'll note that the RHS has 2 matrices named $\"L\"$ and $\"U\"$. The idea of the procedure is to use some matrix algebra rules to transform $\"L\"$ into a lower tringular matrix and $\"U\"$ into an upper triangular matrix. In the process, we are going to build up the permutation matrix $\"P\"$.\n",
+    "\n",
+    "Starting off, let's use $1$ as our first pivot to eliminate column 1:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\underbrace{\\bm 1&0&0\\\\0&1&0\\\\0&0&1 \\em}_{\"P\"}\\underbrace{\\bm 1&2&1\\\\2&4&-1\\\\-1&1&-1 \\em}_A &= \\underbrace{\\bm 1&0&0\\\\0&1&0\\\\0&0&1\\em}_{\"L\"} \\underbrace{\\bm 1&2&1\\\\2&4&-1\\\\-1&1&-1 \\em}_{\"U\"}\\\\\n",
+    "    &= \\bm 1&0&0\\\\0&1&0\\\\0&0&1\\em\\left(\\bm 1&0&0\\\\2&1&0\\\\-1&0&1 \\em \\bm 1&0&0\\\\-2&1&0\\\\1&0&1 \\em\\right) \\bm 1&2&1\\\\2&4&-1\\\\-1&1&-1 \\em\\\\\n",
+    "    &=\\left(\\bm 1&0&0\\\\0&1&0\\\\0&0&1\\em\\bm 1&0&0\\\\2&1&0\\\\-1&0&1 \\em \\right)  \\left(\\bm 1&0&0\\\\-2&1&0\\\\1&0&1 \\em \\bm 1&2&1\\\\2&4&-1\\\\-1&1&-1 \\em\\right)\\\\\n",
+    "    &=\\underbrace{\\bm 1&0&0\\\\2&1&0\\\\-1&0&1 \\em}_{\"L\"} \\underbrace{\\bm 1&2&1\\\\0&0&-3\\\\0&3&0 \\em}_{\"U\"}\n",
+    "\\end{align*}\n",
+    "\n",
+    "Just like in [](#linsys-perms-ex1), we run into the same issue of a zero pivot. How can we fix this? Recall that for any permutation matrix $P$ swapping 2 rows, $PP = I$ (In this case, we want $P$ to be the permutation matrix swapping rows 2 and 3 of $\"U\"$). We can cleverly insert this expression in the middle of $\"L\"$ and $\"U\"$, and use associativity of matrix multiplication to get:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\underbrace{\\bm 1&0&0\\\\0&1&0\\\\0&0&1 \\em}_{\"P\"}\\underbrace{\\bm 1&2&1\\\\2&4&-1\\\\-1&1&-1 \\em}_A &=\\underbrace{\\bm 1&0&0\\\\2&1&0\\\\-1&0&1 \\em}_{\"L\"} \\underbrace{\\bm 1&2&1\\\\0&0&-3\\\\0&3&0 \\em}_{\"U\"}\\\\\n",
+    "    &= \\underbrace{\\bm 1&0&0\\\\2&1&0\\\\-1&0&1 \\em}_{\"L\"} \\left( \\bm 1&0&0\\\\0&0&1\\\\0&1&0 \\em \\bm 1&0&0\\\\0&0&1\\\\0&1&0 \\em \\right) \\underbrace{\\bm 1&2&1\\\\0&0&-3\\\\0&3&0 \\em}_{\"U\"}\\\\\n",
+    "    &= \\left(\\underbrace{\\bm 1&0&0\\\\2&1&0\\\\-1&0&1 \\em}_{\"L\"} \\bm 1&0&0\\\\0&0&1\\\\0&1&0 \\em  \\right)\\left(\\bm 1&0&0\\\\0&0&1\\\\0&1&0 \\em  \\underbrace{\\bm 1&2&1\\\\0&0&-3\\\\0&3&0 \\em}_{\"U\"}\\right)\\\\\n",
+    "    &= \\underbrace{\\bm 1&0&0\\\\2&0&1\\\\-1&1&0 \\em}_{\"L\"} \\underbrace{\\bm 1&2&1\\\\0&3&0\\\\0&0&-3 \\em}_{\"U\"}\n",
+    "\\end{align*}\n",
+    "\n",
+    "We're almost there! However, our \"L\" matrix isn't lower triangular yet! Not to worry, we can fix this with a single row swap: \n",
+    "\\begin{align*}\n",
+    "    &\\underbrace{\\bm 1&0&0\\\\0&1&0\\\\0&0&1 \\em}_{\"P\"}\\underbrace{\\bm 1&2&1\\\\2&4&-1\\\\-1&1&-1 \\em}_A =\\underbrace{\\bm 1&0&0\\\\2&0&1\\\\-1&1&0 \\em}_{\"L\"} \\underbrace{\\bm 1&2&1\\\\0&3&0\\\\0&0&-3 \\em}_{\"U\"}\\\\\n",
+    "    &\\underset{\\text{(implies)}}{\\implies} \\bm 1&0&0\\\\0&0&1\\\\0&1&0 \\em \\underbrace{\\bm 1&0&0\\\\0&1&0\\\\0&0&1 \\em}_{\"P\"}\\underbrace{\\bm 1&2&1\\\\2&4&-1\\\\-1&1&-1 \\em}_A = \\bm 1&0&0\\\\0&0&1\\\\0&1&0 \\em\\underbrace{\\bm 1&0&0\\\\2&0&1\\\\-1&1&0 \\em}_{\"L\"} \\underbrace{\\bm 1&2&1\\\\0&3&0\\\\0&0&-3 \\em}_{\"U\"}\\\\\n",
+    "    &\\implies \\underbrace{\\bm 1&0&0\\\\0&0&1\\\\0&1&0 \\em}_{\"P\"}\\underbrace{\\bm 1&2&1\\\\2&4&-1\\\\-1&1&-1 \\em}_A = \\underbrace{\\bm 1&0&0\\\\-1&1&0\\\\2&0&1 \\em}_{\"L\"} \\underbrace{\\bm 1&2&1\\\\0&3&0\\\\0&0&-3 \\em}_{\"U\"}\n",
+    "\\end{align*}\n",
+    "\n",
+    "(An astute reader might notice that $\"L\"$ was unchanged from multiplying it from both the left and right by $P$ (i.e., $\"L\" = P \\times \"L\" \\times \"P\"$) where $P$ was the row swap we defined above. This is no coincidence, and stems from the fact that $\"L\"$ has a particular structure which we will discuss later.)\n",
+    "\n",
+    "And we're done! But this example was only for a small 3x3 system, where we only had to make one row swap. Let's try to distill the essence of what we just did into a more general procedure to compute the $PA = LU$ factorization of any square nonsingular matrix (this same procedure will generalize to nonsquare matrices as well).\n",
+    "\n",
+    "* First, initialize your matrices:\n",
+    "\n",
+    "  * $\"P\"$ starts off as the identity matrix.\n",
+    "\n",
+    "  * $\"L\"$ starts off as the identity matrix.\n",
+    "\n",
+    "  * $\"U\"$ starts off as the input coefficient matrix $A$.\n",
+    "\n",
+    "* Second, we are going to perform a series of steps (Step $1$, Step $2$, ..., Step $n$) such that at end of Step $k$, for $k = 1, 2, ..., n$, the following *invariants* are satisfied:\n",
+    "\n",
+    "  * $\"P\"\\times A = \"L\" \\times \"U\"$.\n",
+    "\n",
+    "  * $\"P\"$ is a permutation matrix.\n",
+    " \n",
+    "  * $L$ is lower triangular.\n",
+    "\n",
+    "  * The *trailing* (bottomright-most) $(n - k) \\times (n - k)$ submatrix of $\"L\"$ is the identity matrix and only has zeros above it in $L$.\n",
+    "\n",
+    "  * The *leading* (topleft-most) $k \\times k$ submatrix of $U$ is upper triangular and only has zeros below it in $\"U\"$.\n",
+    "\n",
+    "  If we do the following, we can always preserve these invariants. At Step $k$,\n",
+    "\n",
+    "  * If the pivot at position $(k, k)$ is nonzero, then continue onto the next step. Otherwise, swap it with an element *below it*, and *left multiply* $\"P\"$ by the permutation matrix corresponding to the rows that were swapped.\n",
+    "  \n",
+    "  * Use said pivot at position $(k, k)$ to eliminate the entries *below it* by *right multiplying* $\"U\"$ by some elementary matrices, and *left multiplying* \"L\" by the inverse of those elementary matrices.\n",
+    "\n",
+    "* Finally, by our invariants, at the end of Step $n$: $\"P\"$, $\"L\"$, $\"U\"$ will be the $PA = LU$ factorization of $A$.\n",
+    "\n",
+    "In this course, we don't place an emphasis on the gritty details behind this procedure, so we won't prove it's correctness here. But still, try to convince yourself that this procedure works for square, nonsingular matrices!\n",
+    "\n",
+    "```"
    ]
   },
   {
