--- a/Linear system of equations/024-linsys-perms.ipynb
+++ b/Linear system of equations/024-linsys-perms.ipynb
@@ -403,7 +403,7 @@
     "\n",
     "  * If the pivot at position $(k, k)$ is nonzero, then continue onto the next step. Otherwise, swap it with an element *below it*, and *left multiply* $\"P\"$ by the permutation matrix corresponding to the rows that were swapped.\n",
     "  \n",
-    "  * Use said pivot at position $(k, k)$ to eliminate the entries *below it* by *right multiplying* $\"U\"$ by some elementary matrices, and *left multiplying* \"L\" by the inverse of those elementary matrices.\n",
+    "  * Use said pivot at position $(k, k)$ to eliminate the entries *below it* by *left multiplying* $\"U\"$ by some elementary matrices, and *right multiplying* \"L\" by the inverse of those elementary matrices.\n",
     "\n",
     "* Finally, by our invariants, at the end of Step $n$: $\"P\"$, $\"L\"$, $\"U\"$ will be the $PA = LU$ factorization of $A$.\n",
     "\n",
