modified:   Linear system of equations/026-linsys-general.ipynb 	new file:   figures/02-geometry.png

--- a/Linear system of equations/026-linsys-general.ipynb
+++ b/Linear system of equations/026-linsys-general.ipynb
@@ -47,7 +47,8 @@
     "\n",
     "By the end of this page, you should know:\n",
     "- row echelon form of matrices\n",
-    "- "
+    "- Rank of a matrix\n",
+    "- solving linear systems using row echelon form"
    ]
   },
   {
@@ -118,6 +119,7 @@
     "\n",
     "For example, consider the linear system with the augmented matrix\n",
     "\\begin{equation}\n",
+    "\\label{no_pivot_sys}\n",
     "\\left[ \\begin{array}{ccccc|c} 1 & 3 & 2 & -1 & 0 & a \\\\ 2 & 6 & 1 & 4 & 3 & b \\\\ -1 & -3 & -3 & 3 & 1 & c \\\\ 3 & 9 & 8 & 7 & 2 & d\\end{array}\\right],\n",
     "\\end{equation}\n",
     "where $\\textbf{b} = \\begin{bmatrix} a \\\\ b \\\\ c \\\\ d\\end{bmatrix}$ is a generic vector. The $(1,1)$ entry is a pivot. We use elementary row operations to make the entries below the pivot to be zero.\n",
@@ -131,6 +133,7 @@
     "\\end{equation}\n",
     "After swapping the last two rows, the left-hand matrix in row echelon form is\n",
     "\\begin{equation}\n",
+    "\\label{no_pivot_final}\n",
     "\\left[ \\begin{array}{ccccc|c} 1 & 3 & 2 & -1 & 0 & a \\\\ 0 & 0 & -3 & 6 & 3 & b-2a \\\\  0 & 0 & 0 & 8 & 4 & d + \\frac{2}{3}b-\\frac{13}{3}a \\\\ 0 & 0 & 0 & 0 & 0 & c-\\frac{b}{3}+\\frac{5}{3}a \\end{array}\\right].\n",
     "\\end{equation}\n",
     "The three pivots are $1, -3, 8$ at $(1,1), (2, 3), (3, 4)$.\n",
@@ -206,11 +209,67 @@
   },
   {
    "cell_type": "markdown",
-   "id": "636cb1e7-6a17-4d2d-b4eb-b594ed46a68f",
+   "id": "30ceef13-a480-42d9-aa4d-d10e688ace0d",
    "metadata": {},
    "source": [
     "## Solving linear systems in row echelon form\n",
-    "\n"
+    "\n",
+    "Suppose we have reduced the system to row echelon form $[U | \\textbf{c}]$, we will now discuss how to solve such a system and the types of solution sets that are possible.\n",
+    "\n",
+    "### No solution\n",
+    "\n",
+    "First, we will check for _inconsistent equations_. For example, if the $i^{th}$ row of $U$ is all zeros, but the corresponding entry $c_i \\neq 0$, then this would represent $0 = c_i \\neq 0$. This case corresponds to when $A \\textbf{x} = \\textbf{b}$ has _no solution_, also called _incompatible_. In [](#no_pivot_final), the last row is all zeros. Hence, the system [](#no_pivot_sys) has no solution if $c-\\frac{b}{3}+\\frac{5}{3}a \\neq 0$. If there are no such inconsistencies, the system has one or more solutions and we will see how to solve such _compatible linear systems_. \n",
+    "\n",
+    "### Compatible linear systems\n",
+    "\n",
+    "To find the solutions to compatible linear systems, we first split the variables into two separate classes.\n",
+    "\n",
+    "```{prf:definition}\n",
+    "In a linear system $U \\textbf{x} = \\textbf{c}$ in row echelon form, \n",
+    "1. the variables corresponding to columns containing a pivot are called _basic variables_, while \n",
+    "2. the variables corresponding to the columns without a pivot are called _free variables_.\n",
+    "```\n",
+    "\n",
+    "We use back substitution to solve $U \\textbf{x} = \\textbf{c}$, but our goal is to express the basic variables as a function of the free variables. We use our previous example to illustrate this procedure by setting $a = 1, b = 2, c=1, d=2$:\n",
+    "\\begin{equation}\n",
+    "\\label{basic_free}\n",
+    "\\left[ \\begin{array}{ccccc|c} 1 & 3 & 2 & -1 & 0 & 1 \\\\ 0 & 0 & -3 & 6 & 3 & 0 \\\\  0 & 0 & 0 & 8 & 4 & -1 \\\\ 0 & 0 & 0 & 0 & 0 & 0 \\end{array}\\right].\n",
+    "\\end{equation}\n",
+    "\n",
+    "Let us denote the variables as $(x, y, z, u, v)$. From [](#basic_free), $\\color{red}{(x, z, u)}$ are basic variables, while $\\color{green}{(y, v)}$ are free variables. We need to solve the reduced system\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\label{basic_free_sys}\n",
+    "\\color{red}{x}+\\color{green}{3y}+\\color{red}{2z}-\\color{red}{u} &= 1, \\\\\n",
+    "-\\color{red}{3z} + \\color{red}{6u} + \\color{green}{3v} &= 0, \\\\\n",
+    "\\color{red}{8u} + \\color{green}{4v} &= -1\n",
+    "\\end{equation}\n",
+    "Rearranging [](#basic_free_sys) starting from the last equation to express the basic variables as a function of the free variables:\n",
+    "\\begin{equation}\n",
+    "\\label{basic_fn_free}\n",
+    "u &= -\\frac{1}{8} - \\frac{v}{2}, \\\\\n",
+    "z &= v -\\frac{1}{4} - v = -\\frac{1}{4}, \\\\\n",
+    "x &= \\frac{11}{8} - 3y - \\frac{v}{2}.\n",
+    "\\end{equation}\n",
+    "As the name suggests, we are free to chose any values for the free variables $\\color{green}{(y, v)}$ and the basic variables should satisfy [](#basic_fn_free). One possible solution for [](#no_pivot_sys) is $x = 1, y=\\frac{1}{8}, z=-\\frac{1}{4}, u =-\\frac{1}{8}, v = 0$.\n",
+    "\n",
+    "```{note}\n",
+    "1. In general, for an $m \\times n$ system ($m$ equations and $n$ unknowns) of rank $r$, there are $r$ basic variables and $m - r$ free variables.\n",
+    "2. There are $m - r$ all zero rows in the row echelon form of the linear system. The system is compatible if and only if the corresponding right-hand vector entries $c_i$ are zero.\n",
+    "```\n",
+    "\n",
+    "In summary, our conclusion is given below.\n",
+    "```{prf:theorem}\n",
+    ":label: solution_set\n",
+    "A system $A \\textbf{x} = \\textbf{b}$ of $m$ linear equations in $n$ unknowns has either\n",
+    "1. exactly one solution, \n",
+    "2. inﬁnitely many solutions, or\n",
+    "3. no solution.\n",
+    "```\n",
+    "\n",
+    "```{hint} Rank and [](#solution_set)\n",
+    "Can you identify conditions on the rank of $A$ that imply the three cases? For instance, rank($A) = n \\Rightarrow$ exactly one solution.\n",
+    "```"
    ]
   },
   {
@@ -265,6 +324,30 @@
     "Write me\n",
     "```\n",
     "````"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dffa9b7c-640c-47ff-a08e-58928a86364b",
+   "metadata": {},
+   "source": [
+    "## A Geometric perspective\n",
+    "\n",
+    "Suppose we have $m$ equations in three unknowns of the form\n",
+    "\\begin{equation}\n",
+    "\\label{three}\n",
+    "a_{i1}x_1 + a_{i2}x_2 + a_{i3}x_3 = b_i,\n",
+    "\\end{equation}\n",
+    "where $i = 1,2,\\ldots,m$. The solution set to each equation [](#three) defines a plane $P_i$ in three dimensional space. Therefore, when solving $A \\textbf{x} = \\textbf{b}$, we are looking for a point $(x_1, x_2, x_3)$ that lies in all of the planes $P_i$ defined by the $m$ equations of the form [](#three). \n",
+    "\n",
+    "Geometrically, we are looking for a point $\\textbf{x}$ that lies in the intersection $P_1 \\cap P_2 \\cap \\ldots \\cap P_m$. The picture below illustrates the three possible solution sets for $m=3$ equations with three unknowns.\n",
+    ":::{figure}../figures/02-geometry.png\n",
+    ":alt: Geometry of solution set\n",
+    ":width: 500px\n",
+    ":align: center\n",
+    ":::\n",
+    "\n",
+    "Having primarily taken the algebric route so far to discuss linear systems, this brief geometric perspective will serve as an introduction to delve deep into other concepts in subsequent lectures that has strong geometric conncetions. "
    ]
   }
  ],
