renamed:    Linear system of equations/020-linsys-intro.ipynb -> Linear Algebraic Systems/020-linsys-intro.ipynb 	renamed:    Linear system of equations/021-linsys-gauss.ipynb -> Linear Algebraic Systems/021-linsys-gauss.ipynb 	renamed:    Linear system of equations/022-linsys-matvec.ipynb -> Linear Algebraic Systems/022-linsys-matvec.ipynb 	renamed:    Linear system of equations/023-linsys-gauss.ipynb -> Linear Algebraic Systems/023-linsys-gauss.ipynb 	renamed:    Linear system of equations/023a-linsys-LU.ipynb -> Linear Algebraic Systems/023a-linsys-LU.ipynb 	renamed:    Linear system of equations/024-linsys-perms.ipynb -> Linear Algebraic Systems/024-linsys-perms.ipynb 	renamed:    Linear system of equations/025-linsys-inverses.ipynb -> Linear Algebraic Systems/025-linsys-inverses.ipynb 	renamed:    Linear system of equations/026-linsys-general.ipynb -> Linear Algebraic Systems/026-linsys-general.ipynb

--- a/Linear Algebraic Systems/021-linsys-gauss.ipynb
+++ b/Linear Algebraic Systems/021-linsys-gauss.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "---\n",
     "title: Solving Linear Systems via Gaussian Elimination\n",
-    "subject:  Linear System of Equations\n",
+    "subject:  Linear Algebraic Systems\n",
     "subtitle: Forward elimination and back substitution are all you need\n",
     "short_title: Gaussian Elimination\n",
     "authors:\n",
