--- a/Linear Algebraic Systems/022-linsys-matvec.ipynb
+++ b/Linear Algebraic Systems/022-linsys-matvec.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "---\n",
     "title: Matrices and Vectors\n",
-    "subject:  Linear System of Equations\n",
+    "subject:  Linear Algebraic Systems\n",
     "subtitle: The building blocks of linear algebra\n",
     "short_title: Matrices and Vectors\n",
     "authors:\n",
