--- a/Linear Algebraic Systems/023-linsys-gauss.ipynb
+++ b/Linear Algebraic Systems/023-linsys-gauss.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "---\n",
     "title: Gaussian Elimination Revisited\n",
-    "subject:  Linear System of Equations\n",
+    "subject:  Linear Algebraic Systems\n",
     "subtitle: Gaussian Elimination as Matrix Factorization\n",
     "short_title: Gaussian Elimination using Matrices\n",
     "authors:\n",
