--- a/Linear Algebraic Systems/023a-linsys-LU.ipynb
+++ b/Linear Algebraic Systems/023a-linsys-LU.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "---\n",
     "title: LU-Factorization\n",
-    "subject:  Linear System of Equations\n",
+    "subject:  Linear Algebraic Systems\n",
     "subtitle: Peeling the Onion\n",
     "short_title: LU-Factorization\n",
     "authors:\n",
