--- a/Linear Algebraic Systems/024-linsys-perms.ipynb
+++ b/Linear Algebraic Systems/024-linsys-perms.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "---\n",
     "title: The Permuted LU-Factorization\n",
-    "subject:  Linear System of Equations\n",
+    "subject:  Linear Algebraic Systems\n",
     "subtitle: Let's mix things up a little\n",
     "short_title: Permuted LU-Factorization\n",
     "authors:\n",
