--- a/Linear Algebraic Systems/025-linsys-inverses.ipynb
+++ b/Linear Algebraic Systems/025-linsys-inverses.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "---\n",
     "title: Matrix inverses\n",
-    "subject:  Linear System of Equations\n",
+    "subject:  Linear Algebraic Systems\n",
     "subtitle: reciprocal of matrices\n",
     "short_title: Matrix inverses\n",
     "authors:\n",
