--- a/Linear Algebraic Systems/026-linsys-general.ipynb
+++ b/Linear Algebraic Systems/026-linsys-general.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "---\n",
     "title: General Linear Systems\n",
-    "subject:  Linear System of Equations\n",
+    "subject:  Linear Algebraic Systems\n",
     "subtitle: solving with nonsingular coefficient matrices\n",
     "short_title: General Linear Systems\n",
     "authors:\n",
