--- a/Linear Algebraic Systems/026-linsys-general.ipynb
+++ b/Linear Algebraic Systems/026-linsys-general.ipynb
@@ -23,7 +23,7 @@
     "      - University of Pennsylvania\n",
     "    email: nmatni@seas.upenn.edu\n",
     "license: CC-BY-4.0\n",
-    "keywords: inverse, Gauss Jordan elimination, identity matrix\n",
+    "keywords: row echelon form, rank of a matrix, no solution, inifinitely many solutions\n",
     "---"
    ]
   },
