modified:   Linear Algebraic Systems/026-linsys-general.ipynb 	new file:   Vector Spaces and Bases/022-linsys-matvec.ipynb 	modified:   Vector Spaces and Bases/031-vector_spaces.ipynb 	new file:   figures/03-vec_add_scale.jpg

--- a/Vector Spaces and Bases/031-vector_spaces.ipynb
+++ b/Vector Spaces and Bases/031-vector_spaces.ipynb
@@ -12,9 +12,9 @@
    },
    "source": [
     "---\n",
-    "title: Vector Spaces\n",
+    "title: Real Vector Spaces\n",
     "subject: Vector Spaces and Bases\n",
-    "subtitle: abstract space of linear algebra\n",
+    "subtitle: fundamental abstraction of linear algebra\n",
     "short_title: How to use this book\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
@@ -23,8 +23,36 @@
     "      - University of Pennsylvania\n",
     "    email: nmatni@seas.upenn.edu\n",
     "license: CC-BY-4.0\n",
-    "keywords: vector spaces, \n",
+    "keywords: vector spaces,\n",
+    "math:\n",
+    "  '\\vv': '\\mathbf{#1}'\n",
+    "  '\\bm': '\\begin{bmatrix}'\n",
+    "  '\\em': '\\end{bmatrix}'\n",
+    "  '\\R': '\\mathbb{R}'\n",
     "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a46f522d-2995-412b-92cf-9ff085526b18",
+   "metadata": {},
+   "source": [
+    "## Reading\n",
+    "\n",
+    "Material related to this page, as well as additional exercises, can be found in ALA Ch. 2.1."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d276bcc3-237d-4cda-8bf0-39285b0a09f3",
+   "metadata": {},
+   "source": [
+    "## Learning Objectives\n",
+    "\n",
+    "By the end of this page, you should know:\n",
+    "- addition and scaling of real vector spaces\n",
+    "- axioms and operations for generic vector spaces\n",
+    "- examples of different vector spaces"
    ]
   },
   {
@@ -33,37 +61,58 @@
    "metadata": {},
    "source": [
     "## Abstraction\n",
-    "\n"
+    "\n",
+    "In mathematics, we can view seemingly unrelated settings, objects and models at the right level of abstraction which enables us to reason them together in the same way. _Vector Space_ is an abstract notion which unifies a wide range of objects such as ordinary vectors, matrices, spaces of functions such as polynomials, exponentials, trigonometric functions, and inifinite dimensional linear operators. We recommend you to understand these new abstract concepts in the context of ordinary eucledian space such as three-dimensional space ($\\mathbb{R}^3$), and then think about applying to more abstract spaces such as polynomials, vector-valued signals, matrices. "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "89561d6f-8a8c-4bae-a05b-87d7fc88dc4e",
+   "id": "af7f5403-8949-4fd6-92ed-30b6de0894b5",
    "metadata": {},
    "source": [
-    "If something is really important, we'll make sure to highlight that too:\n",
-    ":::{important}\n",
-    "In linear algebra, _concepts_ and _computation_ are equally important.\n",
-    ":::\n",
+    "## Real Vector Spaces\n",
     "\n",
-    "Sometimes we'll need to _warn_ you of common pitfalls:\n",
+    "Let us consider the space of all $n \\times 1$ real-values vectors, denoted by $\\mathbb{R}^n$. Adding two vectors $\\vv v, \\vv w \\in \\mathbb{R}^n$ can be viewed geometrically through a parallelogram, and multiplication by a scalar $c \\in \\mathbb{R}$ is stretching/shrinking the vector by factor $c$.\n",
     "\n",
-    ":::{warning}\n",
-    "This course can be challenging at times, but it is potentially the most wortwhile undergraduate math class you'll take.\n",
-    ":::\n",
-    "\n",
-    "And in case of extreme risks, we'll alert you of danger!\n",
-    "````{danger}\n",
-    ":name: divide-by-zero\n",
-    "Dividing by zero can get you into some serious trouble, just ask this guy:\n",
-    "```{image} divide_by_zero.png\n",
-    ":alt: He divided by zero\n",
-    ":width: 250px\n",
+    ":::{figure}../figures/03-vec_add_scale.jpg\n",
+    ":alt: Addition and scaling of vectors\n",
+    ":width: 500px\n",
     ":align: center\n",
-    "```\n",
-    "````\n",
+    ":::\n",
     "\n",
-    "Linear algebra can be overwhelming at first, as you will have to learn and remember a lot of new concepts.  To help with this, we'll make use of _hover cards_ to remind you of key definitions, theorems, and [tips 🍎](#apple). "
+    "We aim to abstract the above properties so that we can add and scale generic \"vectors\" living in a \"vector space\". \n",
+    "\n",
+    ":::{prf:definition} Vector space operations\n",
+    ":label: vec_space_op\n",
+    "A _vector space_ is a set $V$ equipped with two operations:\n",
+    "1. Addition: adding any pair of vectors $ \\vv v, \\vv w \\in V$ produces another vector $\\vv v + \\vv w \\in V$,\n",
+    "2. Scalar Multiplication: multiplying a vector $\\vv v \\in V$ by a scalar $c \\in \\mathbb{R}$ produces a vector $c \\vv v \\in V$.\n",
+    ":::\n",
+    "\n",
+    ":::{prf:definition} Vector space axioms\n",
+    ":label: vec_space_ax\n",
+    "A _vector space_ $V$ is subject to the following axioms for all $\\vv u, \\vv v, \\vv w \\in V$ and scalars $c, d \\in \\mathbb{R}$\n",
+    "1. Commutativity of Addition: $\\vv v + \\vv w = \\vv w + \\vv v$.\n",
+    "2. Associativity of Addition: $\\vv u + (\\vv v + \\vv w) = (\\vv u + \\vv v) + \\vv w$.\n",
+    "3. Additive Identity: There is a zero element $\\vv 0 \\in V$ satisfying $\\vv v + \\vv 0 = \\vv v = \\vv 0 + \\vv v$.\n",
+    "4. Additive Inverse: For each $\\vv v \\in V$ there is an element $− \\vv v \\in V$ such that\n",
+    "$\\vv v + (− \\vv v) = \\vv 0 = (− \\vv v) + \\vv v$.\n",
+    "5. Distributivity: $( c +  d) \\vv v = (c \\vv v) + (d \\vv v)$, and $c (\\vv v + \\vv w) = (c \\vv v) + (c \\vv w)$.\n",
+    "6. Associativity of Scalar Multiplication: $c (d \\vv v) = (c d) \\vv v$.\n",
+    "7. Unit for Scalar Multiplication: the scalar $1 \\in \\mathbb{R}$ satisﬁes $1 \\vv v =\\vv v$.\n",
+    ":::\n",
+    "\n",
+    "The following properties can be deduced from the [axioms](#vec_space_ax).\n",
+    "\n",
+    ":::{note} Properties\n",
+    ":label: vec_space_prop\n",
+    "1. The $\\vv 0$ vector in [axiom](#vec_spac_ax) 3. is unique.\n",
+    "2. The additive inverse $-\\vv v$ in [axiom](#vec_spac_ax) 4., called the _negative of $\\vv v$_ is unique.\n",
+    "3. $$0 \\vv v = \\vv 0$ ($0$ is a scalar, $\\vv 0$ is a vector).\n",
+    "4. $-1 \\vv v = -\\vv v$.\n",
+    "5. $c \\vv 0 = \\vv 0$ for any $c \\in \\mathbb{R}$.\n",
+    "6. If $c \\vv v = \\vv 0$, then either $c=0$ or $\\vv v = \\vv 0$.\n",
+    ":::"
    ]
   },
   {
@@ -71,29 +120,16 @@
    "id": "3b7618b1-97c9-4576-8c76-6a388a8b0e09",
    "metadata": {},
    "source": [
-    "## A sample worked example\n",
+    "## Example 1: Eucledian Space $\\mathbb{R}^n$\n",
     "\n",
-    "Concepts intoduced in this class will sometimes seem abstract at first, but we'll always make sure to show you how to use them via worked examples.  All worked examples will come with both hints (in case you're stuck but don't want a full solution) and solutions.\n",
+    "$\\mathbb{R}^n$ is the space of $n \\times 1$ column vectors with addition, scaling and the $\\vv 0$ vector given below.\n",
+    "$$\n",
+    "\\vv v = \\bm v_1 \\\\ v_2 \\\\ \\vdots \\\\ v_n \\em, \\vv w = \\bm w_1 \\\\ w_2 \\\\ \\vdots \\\\ w_n \\em, \\vv v + \\vv w = \\bm v_1 + w_1 \\\\ v_2 + w_2 \\\\ \\vdots \\\\ v_n + w_n \\em, c \\vv v = \\bm c v_1 \\\\ c v _2 \\\\ \\vdots \\\\ c v_n\\em, \\vv 0 = \\bm 0 \\\\ 0 \\\\ \\vdots \\\\ 0 \\em\n",
+    "$$\n",
     "\n",
-    "````{exercise}  My first system of linear equations\n",
-    ":label: my-exercise\n",
-    "Find the solution to the following system of linear equations\n",
-    "\\begin{eqnarray}\n",
-    "\\label{eq:linsys}\n",
-    "x_1 - 2x_2 & = -1 \\\\\n",
-    "-x_1 + 3x_2 & = 3\n",
-    "\\end{eqnarray}\n",
-    ":::{hint} Click me for a hint!\n",
-    ":class: dropdown\n",
-    "Try adding the two equations of [](#eq:linsys) together to eliminate $x_1$.[^note]\n",
-    "\n",
-    "[^note]: By the way, did you try hovering over the equation number?\n",
-    ":::\n",
-    "```{solution} my-exercise\n",
-    ":class: dropdown\n",
-    "Adding the two equations of [](#eq:linsys) gives us that $x_2 = 2$, which we plug back into $x_1 - 2x_2 = -1$ to conclude that $x_1=3$.  We conclude that the system of linear equations [](#eq:linsys) has a unique solution $(3,2)$.\n",
-    "```\n",
-    "````"
+    "```{note}\n",
+    "If it is difficult to understand generic vector spaces, think about $\\mathbb{R}^3$, since we are using the same geometric ideas to add and scale encodings of different objects.\n",
+    "```"
    ]
   },
   {
@@ -107,56 +143,16 @@
     "tags": []
    },
    "source": [
-    "## Definitions and theorems (and proofs)\n",
+    "## Example 2: Real $m \\times n$ matrices $\\mathbb{R}^{m \\times n}$\n",
     "\n",
-    "This is a math class designed for engineers by engineers, but it is still a math class, which means that we'll be introducing new concepts through definitions, and telling you about the properties that they enjoy through theorems.  Although this class does not focus on proofs, and we will never ask you to prove something in homework or exam questions, we still provide you with the proofs in case you're curious.  Those of you who think you may want to pursue more theoretical work in the future are strongly encouraged to take a look at these!\n",
+    "$\\mathbb{R}^n$ is the space of $n \\times 1$ column vectors with addition, scaling and the $\\vv 0$ vector given below.\n",
+    "$$\n",
+    "\\vv v = \\bm v_1 \\\\ v_2 \\\\ \\vdots \\\\ v_n \\em, \\vv w = \\bm w_1 \\\\ w_2 \\\\ \\vdots \\\\ w_n \\em, \\vv v + \\vv w = \\bm v_1 + w_1 \\\\ v_2 + w_2 \\\\ \\vdots \\\\ v_n + w_n \\em, c \\vv v = \\bm c v_1 \\\\ c v _2 \\\\ \\vdots \\\\ c v_n\\em, \\vv 0 = \\bm 0 \\\\ 0 \\\\ \\vdots \\\\ 0 \\em\n",
+    "$$\n",
     "\n",
-    "To highlight some of the useful features of the online textbook format, we introduce two very important definitions that we'll work with a lot this semester, _linear dependence_ and _linear independence_.\n",
-    "\n",
-    ":::{prf:definition} Linear dependence\n",
-    ":label: def-lindep\n",
-    "A sequence of vectors $\\mathbf{v}_1, \\mathbf{v}_2, \\dots, \\mathbf{v}_k$ from a vector space $\\mathcal{V}$ is said to be _linearly dependent_, if there exist scalars $a_1, a_2, \\dots, a_k,$ not all zero, such that\n",
-    "$$\n",
-    "\\label{eq-lindep}\n",
-    "a_1\\mathbf{v}_1 + a_2\\mathbf{v}_2 + \\cdots + a_k\\mathbf{v}_k = \\mathbf{0},\n",
-    "$$\n",
-    "where $\\mathbf{0}$ denotes the zero vector.\n",
-    ":::\n",
-    "\n",
-    ":::{prf:definition} Linear independence\n",
-    ":label: def-linindep\n",
-    "A sequence of vectors $\\mathbf{v}_1, \\mathbf{v}_2, \\dots, \\mathbf{v}_k$ from a vector space $\\mathcal{V}$ is said to be _linearly independent_, if they are not [linearly dependent](#def-lindep), i.e.,\n",
-    "$$\n",
-    "a_1\\mathbf{v}_1 + a_2\\mathbf{v}_2 + \\cdots + a_k\\mathbf{v}_k = \\mathbf{0},\n",
-    "$$\n",
-    "only if $a_1=a_2=\\cdots=a_k=0$.\n",
-    ":::\n",
-    "\n",
-    "Notice that if you put your cursor over [linearly dependent](#def-lindep) in the above, the definition appears in a hover card.  In general, any link that cross-references a prior definition, theorem, equation, figure, etc. is equipped with such a hover card.  This can come in really handy while you're still getting familiar with new concepts! \n",
-    "\n",
-    ":::{prf:theorem} Unique coefficients\n",
-    ":label: thm-coeffs\n",
-    "Suppose a vector $\\mathbf{x}$ is a combination of [linearly independent](#def-linindep) vectors $\\mathbf{v}_1, \\mathbf{v}_2, \\dots, \\mathbf{v}_k$:\n",
-    "$$\n",
-    "\\label{rep1}\n",
-    "\\mathbf{x}=a_1\\mathbf{v}_1 + a_2\\mathbf{v}_2 + \\cdots + a_k\\mathbf{v}_k.\n",
-    "$$\n",
-    "Then the coefficients $\\{a_i\\}_{i=1}^k$ are unique, i.e., if \n",
-    "$$\n",
-    "\\label{rep2}\n",
-    "\\mathbf{x}=b_1\\mathbf{v}_1 + b_2\\mathbf{v}_2 + \\cdots + b_k\\mathbf{v}_k,\n",
-    "$$\n",
-    "then $a_i=b_i$ for $i=1,\\dots,k$.\n",
-    ":::\n",
-    ":::{prf:proof} Proof of [](#thm-coeffs)\n",
-    ":label: prf-coeffs\n",
-    ":class: dropdown\n",
-    "Subtracting equation [](#rep2) from equation [](#rep1), we see that \n",
-    "$$\n",
-    "(a_1-b_1)\\mathbf{v}_1 + (a_2-b_2)\\mathbf{v}_2 + \\cdots + (a_k-b_k)\\mathbf{v}_k=\\mathbf 0.\n",
-    "$$\n",
-    "Since the vectors $\\mathbf{v}_1, \\mathbf{v}_2, \\dots, \\mathbf{v}_k$ are [linearly independent](#def-linindep) and the above sums to $\\mathbf 0$, we must have that $a_i-b_i=0$ for $i=1,\\dots,k$.\n",
-    ":::"
+    "```{note}\n",
+    "If it is difficult to understand generic vector spaces, think about $\\mathbb{R}^3$, since we are using the same geometric ideas to add and scale encodings of different objects.\n",
+    "```"
    ]
   },
   {
